
Version 1.0.688 Released June 28, 2013

    - Added ThreadParkingLot.getParkedThreads()
    - Added @RetryTransaction and associated AOP aspect
    - Added PersistentObject read() and write() convenience methods
    - Added SpringVaadinSession.configureBean()
    - Added IdleTimeoutInputStream
    - Removed @PostCompletionSupport (use TransactionSynchronizationManager)
    - Update vaadin7 package to Vaadin 7.1.x (note: no longer works for 7.0.x)

Version 1.0.659 Released April 9, 2013

    - Added @Unique validation constraint and related classes
    - Added VaadinUtil.invokeLater() and VaadinApplication.invokeLater()
    - Added AbstractUnsizedContainer and AbstractQueryList.handleSizeChange()
    - Added IndentXMLEventWriter and StackXMLEventReader
    - Fix character encoding bug in pobj package (always use UTF-8)
    - Fixed bug in StringEncoder.enquote(byte[]) when non-zero offset
    - Support Vaadin Touchkit and servlet 2.3 API (issue #18)
    - Update vaadin7 package for 7.0+
    - Added updateTable-oracle.sql
    - Added VaadinUtil.assertSession()
    - Added VersionComparator
    - Added ValidationUtil

Version 1.0.592 Released December 14, 2012

    - Add default constructors to Abstract{Simple,Query}Container hierarchy
    - Fixed bug in SpringXSLPersistentObjectSchemaUpdate.setParameters()
    - Add DelayedAction support for use with a Lock; add VaadinDelayedAction
    - Fixed broken maven dependencies in the Vaadin add-on (issue #15)
    - Fixed bug in AbstractDAO.getAll()

Version 1.0.571 Released November 27, 2012

    - Vaadin7: fix bug that broke VaadinApplication.get() when subclassed
    - Vaadin7: remove workaround for Vaadin bug #9946, which is now fixed
    - Update AstractDAO to use EntityManager directly (issue #14)
    - Update vaadin7 package for 7.0.0.beta10
    - Added new class DelayedAction

Version 1.0.548 Released October 19, 2012

    - Update vaadin7 package for 7.0.0.beta5
    - Added ThreadLocalContext.wrap()